#321 Handle transfer calls (Switch --> PISP) (#175)
* #321 Handle transfer calls (Switch --> PISP)

* #321fixed lint issue

* #321 review comments implemented

* #321 addressed new review comments(code formatted)

* #321 repetitive code moved to deepClone()
